# astrospec

./: .gitignore  LICENSE.txt  README.md  instructions.txt  pyproject.toml
docs/source/: api.rst  conf.py  index.rst  usage.rst
src/astrospec/: compute_EW.py
